--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <section>
       
 <h3>
-<a id="vrcity" class="anchor" href="#vrcity" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>vrcity</h3>
+<a id="vrcity" class="anchor" href="#vrcity" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>VR City</h3>
 <img src="http://i.imgur.com/G7vJPQM.png" width="200"/>
 <p>Virtual reality city <br>
 <a href="http://vrcity.network" target="_blank"><strike>website</strike></a> - <a href="https://github.com/erictrose/vrcity" target="_blank">github</a></p>
