--- a/resume.html
+++ b/resume.html
@@ -495,7 +495,7 @@ icon.large {
 				</div>
 				<div class="col-xs-9 col-sm-8">
 					<h1>Eric Rose</h1>
-					<h2>Frontend/ixd Designer and Developer</h2>
+					<h2>Frontend Developer</h2>
 					<section id="basics">
 						<div class="contact">
 							<div class="website">
@@ -507,30 +507,26 @@ icon.large {
 								<a href="/cdn-cgi/l/email-protection#c6aba386a3b4afa5b4a9b5a3e8aba3"><span class="__cf_email__" data-cfemail="96fbf3d6f3e4fff5e4f9e5f3b8fbf3">[email&#160;protected]</span><script data-cfhash='f9e31' type="text/javascript">
 /* <![CDATA[ */!function(){try{var t="currentScript"in document?document.currentScript:function(){for(var t=document.getElementsByTagName("script"),e=t.length;e--;)if(t[e].getAttribute("data-cfhash"))return t[e]}();if(t&&t.previousSibling){var e,r,n,i,c=t.previousSibling,a=c.getAttribute("data-cfemail");if(a){for(e="",r=parseInt(a.substr(0,2),16),n=2;a.length-n;n+=2)i=parseInt(a.substr(n,2),16)^r,e+=String.fromCharCode(i);e=document.createTextNode(e),c.parentNode.replaceChild(e,c)}t.parentNode.removeChild(t);}}catch(u){}}()/* ]]> */</script></a>
 							</div>
-							<div class="phone">
+							<div class="phone" style="margin-top: 5px;">
 								<icon class="entypo-phone"></icon>
 								(916)990-2151
 							</div>
 						</div>
-						<section id="location">
+						<section id="location" style="margin-top: 5px;">
 							<icon class="entypo-home"></icon>
 							<span class="address">
-								7210 Amethyst Lane
-								<br/>
-								<span class="postalCode">FL 32807</span>
-								<span class="city">Winter Park</span>
+								<span class="city">Orlando</span>
 								<span class="region">Florida</span>
-								<span class="countryCode">US</span>
 							</span>
 						</section>
 						<section id="profiles">
 							<div class="item">
-								<a href="https://github.com/erictrose">
+								<a href="https://github.com/erictrose" target="_blank">
 								<icon class="entypo-github"></icon>
 								</a>
 							</div>
 							<div class="item">
-								<a href="https://twitter.com/erictrose">
+								<a href="https://twitter.com/erictrose" target="_blank">
 								<icon class="entypo-twitter"></icon>
 								</a>
 							</div>
@@ -538,13 +534,103 @@ icon.large {
 					</section>
 				</div>
 			</div>
-			<div id="summary" class="row">
+			<div id="summary" class="row" style="margin-top: -20px;">
 				<div class="col-sm-8 col-sm-offset-4 col-xs-12">
 					<div class="summary">
-						<p class="lead">Looking for the right projects with the right team</p>
+						<p class="lead">Frontend developer with an understanding of full stack development including HTML5, CSS3, Javascript, web standards, modern frontend frameworks, modern build tools, relational and nonrelational databases, version control, continuous integration and deployment, Adobe products, UX/UI design principles, and more. I am proficient in Mac, Windows, and Linux development environments. I also bring a wealth of experience from a background in defense and intelligence.</p>
 					</div>
 				</div>
 			</div>
+			
+	<section id="skills" class="row">
+		<div class="col-sm-4">
+			<div class="row">
+				<div class="col-xs-2">
+					<icon class="large entypo-tools"></icon>
+				</div>
+				<div class="col-xs-10">
+					<h2 class="section-title">Skills</h2>
+				</div>
+			</div>
+		</div>
+		<div class="col-sm-8">
+			<div class="item">
+				<h3 class="name">Design</h3>
+				<ul class="keywords">
+					<li>Vector and Raster Design</li>
+					<li>Wireframing</li>
+					<li>Mockups and Prototyping</li>
+					<li>Usability Testing</li>
+					<li>User Driven Design</li>
+					<li>Responsive Layouts</li>
+					<li>Mobile Conscious Design</li>
+				</ul>
+			</div>
+			<div class="item">
+				<h3 class="name">Collaboration</h3>
+				<ul class="keywords">
+					<li>Git and Github</li>
+					<li>Centralized Workflow and Feature Branching</li>
+					<li>Jira/Trello Kanban Boards</li>
+					<li>Hipchat/Slack</li>
+				</ul>
+			</div>
+			<div class="item">
+				<h3 class="name">Frontend</h3>
+				<ul class="keywords">
+					<li>Bootstrap</li>
+					<li>Angular</li>
+					<li>jQuery</li>
+					<li>API Consumption</li>
+					<li>LESS and SASS</li>
+					<li>Gulp and Grunt</li>
+					<li>Bower and npm</li>
+				</ul>
+			</div>
+			<div class="item">
+				<h3 class="name">Backend</h3>
+				<ul class="keywords">
+					<li>Node / npm</li>
+					<li>Express</li>
+					<li>Some PHP</li>
+					<li>Some ASP.NET MVC with Razor</li>
+				</ul>
+			</div>
+			<div class="item">
+				<h3 class="name">Databases</h3>
+				<ul class="keywords">
+					<li>Firebase</li>
+					<li>Mongo</li>
+					<li>MySQL</li>
+				</ul>
+			</div>
+			<div class="item">
+				<h3 class="name">Security</h3>
+				<ul class="keywords">
+                    <li>OSI Model based security approach</li>
+                    <li>Frontend and backend validation</li>
+				    <li>Hashing and salting sensitive user data</li>
+				</ul>
+			</div>
+			<div class="item">
+				<h3 class="name">Other</h3>
+				<ul class="keywords">
+					<li>Advanced Autodesk Maya experience</li>
+					<li>Familiar with 3dStudioMax, Blender, Lightwave and other 3D modeling software</li>
+					<li>Familiar with video editing/FX software and techniques</li>
+				</ul>
+			</div>
+			<div class="item">
+				<h3 class="name">Professional</h3>
+				<ul class="keywords">
+					<li>Ability to identify and solve development problems</li>
+					<li>Ability to learn new technologies quickly and proficiently</li>
+					<li>Strong public speaking and presentation skills, strong leadership and teamwork skills</li>
+				</ul>
+			</div>
+		</div>
+	</section>
+			
 	<section id="work" class="row">
 		<div class="col-sm-4">
 			<div class="row">
@@ -566,17 +652,14 @@ icon.large {
 				</div>
 				<div class="date">
 					<span class="startDate">
-						2016-04-07
+						Apr 2016
 					</span>
 					<span class="endDate">
-						- current
+						- Oct 2016
 					</span>
 				</div>
 				<div class="website">
 					<a href="https://www.certipay.com/">https://www.certipay.com/</a>
-				</div>
-				<div class="summary">
-					<p>Interface Design and ASP.NET MVC</p>
 				</div>
 				<ul class="highlights">
 				    <li>Analyzed industry competitors to gain market competitiveness</li>
@@ -589,25 +672,22 @@ icon.large {
 					Full Sail University
 				</h3>
 				<div class="position">
-					<p class="lead">Student</p>
+					<p class="lead">Web Development BS</p>
 				</div>
 				<div class="date">
 					<span class="startDate">
-						2013-03-30
+						Mar 2013
 					</span>
 					<span class="endDate">
-						- 2016-05-01
+						- May 2016
 					</span>
 				</div>
 				<div class="website">
 					<a href="http://www.fullsail.edu/">http://www.fullsail.edu/</a>
 				</div>
-				<div class="summary">
-					<p>Web Design and Development B.S.</p>
-				</div>
 				<ul class="highlights">
 					<li>Worked on individual and group projects in an accelerated learning environment</li>
-					<li>See Education section for list of technologies worked with</li>
+					<li>Started a student association with over 50 members</li>
 				</ul>
 			</div>
 			<div class="item">
@@ -615,21 +695,18 @@ icon.large {
 					Circinus, LLC
 				</h3>
 				<div class="position">
-					<p class="lead">Intelligence Instructor</p>
+					<p class="lead">Senior Enhanced DCGS-A System Instructor</p>
 				</div>
 				<div class="date">
 					<span class="startDate">
-						2011-09-16
+						Sep 2011
 					</span>
 					<span class="endDate">
-						- 2013-03-15
+						- Mar 2013
 					</span>
 				</div>
 				<div class="website">
 					<a href="http://www.circinus-llc.com/">http://www.circinus-llc.com/</a>
-				</div>
-				<div class="summary">
-					<p>Senior Enhanced DCGS-A System Instructor for Lockheed Martin</p>
 				</div>
 				<ul class="highlights">
 					<li>Traveled extensively to conduct two week classes</li>
@@ -646,19 +723,18 @@ icon.large {
 				</div>
 				<div class="date">
 					<span class="startDate">
-						2008-04-30
+						Apr 2008
 					</span>
 					<span class="endDate">
-						- 2011-09-16
+						- Sep 2011
 					</span>
 				</div>
-				<div class="summary">
-					<p>Imagery and All-Source Analyst</p>
+				<div class="website">
+					<a href="https://www.army.mil/">https://www.army.mil/</a>
 				</div>
 				<ul class="highlights">
 					<li>Participated in weekly video conferences with CENTCOM, the Pentagon, and various intelligence organizations to provide information to a team of 60 intelligence analysts</li>
-					<li>Proficient in TAC Tripwire, Palantir, CIDNE, MFWS, Analyst’s Notebook and other intelligence analysis software tools</li>
-					<li>Inactive security clearance</li>
+					<li>Proficient in TAC Tripwire, Palantir, CIDNE, MFWS, Analyst’s Notebook and other intelligence analysis tools</li>
 				</ul>
 			</div>
 			<div class="item">
@@ -670,14 +746,14 @@ icon.large {
 				</div>
 				<div class="date">
 					<span class="startDate">
-						2005-01-01
+						Jan 2005
 					</span>
 					<span class="endDate">
-						- 2008-04-01
+						- Apr 2008
 					</span>
 				</div>
-				<div class="summary">
-					<p>Designed graphics and business material.</p>
+				<div class="website">
+					<p>Business Closed</p>
 				</div>
 				<ul class="highlights">
 					<li>Designed website, business cards, brochures, flyers, DVD labels, DVD menus, kiosk displays, and other presentation material</li>
@@ -711,10 +787,10 @@ icon.large {
 				</div>
 				<div class="date">
 					<span class="startDate">
-						2013-03-30
+						Mar 2013
 					</span>
 					<span class="endDate">
-						- 2016-05-01
+						- May 2016
 					</span>
 				</div>
 				<ul class="courses">
@@ -750,10 +826,10 @@ icon.large {
 				</div>
 				<div class="date">
 					<span class="startDate">
-						2007-01-01
+						Jun 2008
 					</span>
 					<span class="endDate">
-						- 2008-01-01
+						- Dec 2008
 					</span>
 				</div>
 			</div>
@@ -778,109 +854,11 @@ icon.large {
 					<p class="lead">National Geospatial Intelligence Agency</p>
 				</div>
 				<div class="date">
-					2009-01-01
+					Jun 2009
 				</div>
 				<div class="summary">
 					<p>Awarded by NGA Iraq Country Chief</p>
 				</div>
-			</div>
-		</div>
-	</section>
-
-
-	<section id="skills" class="row">
-		<div class="col-sm-4">
-			<div class="row">
-				<div class="col-xs-2">
-					<icon class="large entypo-tools"></icon>
-				</div>
-				<div class="col-xs-10">
-					<h2 class="section-title">Skills</h2>
-				</div>
-			</div>
-		</div>
-		<div class="col-sm-8">
-			<div class="item">
-				<h3 class="name">Design</h3>
-				<ul class="keywords">
-					<li>Photoshop</li>
-					<li>Illustrator</li>
-					<li>Experience Design CC</li>
-					<li>Concepts</li>
-					<li>Mockups</li>
-					<li>Usability Testing</li>
-					<li>Navigation Testing</li>
-					<li>User Driven Design</li>
-				</ul>
-			</div>
-			<div class="item">
-				<h3 class="name">Project Managament</h3>
-				<ul class="keywords">
-					<li>Git</li>
-					<li>Jira/Trello</li>
-					<li>Hipchat/Slack</li>
-					<li>Continuous Deployment</li>
-					<li>Continous Integration</li>
-				</ul>
-			</div>
-			<div class="item">
-				<h3 class="name">Front End</h3>
-				<ul class="keywords">
-					<li>OS proficiency: Mac, Windows, Linux</li>
-					<li>HTML5 with semantic markup</li>
-					<li>CSS3 including transitions and animations</li>
-					<li>CSS Frameworks: Bootstrap, Foundation, Skeleton</li>
-					<li>Javascript</li>
-					<li>JS Frameworks: jQuery, Angular</li>
-					<li>responsive layouts</li>
-					<li>mobile conscious design</li>
-					<li>Tools: SASS, Compass, Grunt, Bower, etc.</li>
-				</ul>
-			</div>
-			<div class="item">
-				<h3 class="name">Back End</h3>
-				<ul class="keywords">
-					<li>Mostly Node</li>
-					<li>npm, express, sessions, EJS, body parser, mongoose, unirest, passport, etc.</li>
-					<li>Some PHP / Codeigniter</li>
-					<li>Some ASP.NET MVC</li>
-				</ul>
-			</div>
-			<div class="item">
-				<h3 class="name">Databases</h3>
-				<ul class="keywords">
-					<li>MySQL (relational)</li>
-					<li>Mongo (non-relational)</li>
-					<li>Firebase (cloud non-relational)</li>
-					<li>CouchDB and PouchDB (frontend non-relational)</li>
-				</ul>
-			</div>
-			<div class="item">
-				<h3 class="name">Security</h3>
-				<ul class="keywords">
-				    <li>Hashing and salting of sensitive user data</li>
-					<li>Frontend and backend validation</li>
-					<li>PDO with PHP to prevent SQL injection</li>
-					<li>prevention of cross-site scripting</li>
-					<li>OSI Model based security approach</li>
-				</ul>
-			</div>
-			<div class="item">
-				<h3 class="name">Other</h3>
-				<ul class="keywords">
-					<li>Advanced understanding of 3D modeling software, particularly Maya</li>
-					<li>Familiarity with 3dStudioMax, Blender, lightwave and other 3D software</li>
-					<li>Familiarity with video editing software and techniques</li>
-				</ul>
-			</div>
-			<div class="item">
-				<h3 class="name">Professional</h3>
-				<ul class="keywords">
-					<li>Ability to identify and solve development problems with a focus on results</li>
-					<li>Ability to learn new technologies quickly and proficiently</li>
-					<li>Excellence in working under pressure on time sensitive projects</li>
-					<li>Strong public speaking and presentation skills, strong leadership and teamwork skills</li>
-				</ul>
 			</div>
 		</div>
 	</section>
@@ -919,16 +897,16 @@ icon.large {
 		</div>
 		<div class="col-sm-4">
 			<div class="item">
-				<h3><span class="label label-default label-lg">Short form science fiction</span></h3>
-			</div>
-			<div class="item">
-				<h3><span class="label label-default label-lg">Coffee</span></h3>
+				<h3><span class="label label-default label-lg">Science Fiction Books</span></h3>
 			</div>
 			<div class="item">
 				<h3><span class="label label-default label-lg">Maps</span></h3>
 			</div>
 			<div class="item">
 				<h3><span class="label label-default label-lg">Boats</span></h3>
+			</div>
+			<div class="item">
+				<h3><span class="label label-default label-lg">Coffee</span></h3>
 			</div>
 		</div>
 	</section>
