--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div class="wrapper">
       <header>
         <h1>Eric Rose</h1>
-        <h2><a href="https://github.com/erictrose" target="_blank">www.github.com/erictrose</a></h2>
-        
+        <h2><a href="https://github.com/eric-rose" target="_blank">Work</a></h2>
+        <h2><a href="https://github.com/erictrose" target="_blank">Side Projects</a></h2>
         <p>Assorted projects in various states of completion <br><span><a href="https://erictrose.github.io/resume.html" target="_blank">resume</a></span></p>
         
         <img src="https://avatars2.githubusercontent.com/u/5385880?v=3&s=460" />
