--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Eric Rose</h1>
-        <h2><a href="https://github.com/eric-rose" target="_blank">Work</a></h2>
-        <h2><a href="https://github.com/erictrose" target="_blank">Side Projects</a></h2>
+        <h1><a href="https://github.com/erictrose" target="_blank">Eric Rose</a></h1>
         <p>Assorted projects in various states of completion</p>
         <p class="mt-10"><a href="https://erictrose.github.io/resume.html" target="_blank">resume</a> / <a href="https://erictrose.github.io/print-resume.html" target="_blank">printer friendly</a></p>
         <img src="https://avatars2.githubusercontent.com/u/5385880?v=3&s=460" />
@@ -173,7 +171,7 @@
      
       </section>
       <footer>
-       <div style="margin-bottom:15px;">
+       <div style="margin-bottom:0px;">
             <a href="https://twitter.com/erictrose" target="_blank" style="margin-right:5px;">
                 <img src="./twitter.svg" style="width:40px;"></img>
             </a>
@@ -182,7 +180,6 @@
                 <img src="./linkedin.svg" style="width:40px;"></img>
             </a>
         </div>
-        <p>These projects are maintained by <a href="https://github.com/erictrose">erictrose</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Modified theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
