--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <a id="vrcity" class="anchor" href="#vrcity" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>VR City</h3>
 <img src="http://i.imgur.com/G7vJPQM.png" width="200"/>
 <p>Virtual reality city <br>
-<a href="http://vrcity.network" target="_blank"><strike>website</strike></a> - <a href="https://github.com/erictrose/vrcity" target="_blank">github</a></p>
+<a href="http://vrcity.network:8080" target="_blank"><strike>vr</strike></a> - <a href="http://vrcity.network" target="_blank"><strike>website</strike></a> - <a href="https://github.com/erictrose/vrcity" target="_blank">github</a></p>
       
 <h3>
 <a id="vrapt-web" class="anchor" href="#vrapt-web" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Vrapt web</h3>
