added cci image

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 
 <h3>
 <a id="cci-cablecom-inc" class="anchor" href="#cci-cablecom-inc" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CCI Cablecom, Inc.</h3>
+<img src="http://i.imgur.com/k9qHzD8.png" width="200"/>
 <p>Products website for CCI Cablecom, Inc.<br>
 <a href="http://www.ccicablecom.com" target="_blank">website</a></p>
 
