added quality assurance project image

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 <h3>
 <a id="quality-assurance" class="anchor" href="#quality-assurance" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Quality Assurance</h3>
-
+<img src="http://i.imgur.com/x9wqzQs.png" width="200"/>
 <p>Ipad app for performing quality assurance checks in a warehouse environment. <br>
 <a href="https://github.com/erictrose/QualityAssurance" target="_blank">github</a></p>
 
