--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>eric's blog</title>
+    <title>Don't Crease Pages!</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="https://github.com/erictrose" target="_blank">Eric Rose</a></h1>
+        <h1>Eric Rose</h1>
         <p>Assorted projects in various states of completion</p>
         <img src="https://avatars2.githubusercontent.com/u/5385880?v=3&s=460" />
       </header>
@@ -74,20 +74,6 @@
 <img src="https://camo.githubusercontent.com/4f54a868253280af2b877562d21a51461f42f39f/687474703a2f2f696d6775722e636f6d2f58726f456c4a772e706e67" width="200"/>
 <p>A futuristic interface concept. <br>
 <a href="http://hypergate.eric.hosting/" target="_blank">website</a> - <a href="https://github.com/erictrose/Hypergate" target="_blank">github</a></p>
-
-<h3>
-<a id="cci-cablecom-inc" class="anchor" href="#cci-cablecom-inc" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>CCI Cablecom, Inc.</h3>
-<img src="http://i.imgur.com/k9qHzD8.png" width="200"/>
-<p>Products website for CCI Cablecom, Inc.<br>
-<a href="http://www.ccicablecom.com" target="_blank">website</a></p>
-
-<!--
-<h3>
-<a id="skin-party" class="anchor" href="#skin-party" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skin Party</h3>
-
-<p>Browse your <a href="http://store.steampowered.com/" target="_blank">Steam</a> <a href="http://store.steampowered.com/app/730/" target="_blank">CS:GO</a> weapon skin inventory. <br>
-<a href="http://skinparty.xyz/" target="_blank">website</a> - <a href="https://github.com/erictrose/SkinParty" target="_blank">github</a></p>
--->
 
 <h3>
 <a id="secret-agent-messaging-service" class="anchor" href="#secret-agent-messaging-service" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Secret Agent Messaging Service</h3>
