--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
 <a id="vrapt-web" class="anchor" href="#vrapt-web" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Vrapt web</h3>
 <img src="https://camo.githubusercontent.com/3b7d5571fde34a22e6df436304f563e8da1e0c4f/687474703a2f2f692e696d6775722e636f6d2f436652555831512e706e67" width="200"/>
 <p>Virtual reality apartment complex - website <br>
-<a href="http://vraptweb.xyz/" target="_blank">website</a> - <a href="https://github.com/erictrose/vraptweb.xyz" target="_blank">github</a></p>
+  <a href="http://vraptweb.xyz/" target="_blank"><strike>website</strike></a> - <a href="https://github.com/erictrose/vraptweb.xyz" target="_blank">github</a></p>
 
 <h3>
 <a id="vrapt" class="anchor" href="#vrapt" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Vrapt</h3>
 <img src="https://camo.githubusercontent.com/bd3ae7f683f0ace27fc261739a04253ff4038537/687474703a2f2f692e696d6775722e636f6d2f4c6e504e634c6f2e6a7067" width="200"/>
 <p>Virtual reality apartment complex - server <br>
-<a href="http://vrapt.xyz/" target="_blank">vr</a> - <a href="https://github.com/erictrose/vrapt.xyz" target="_blank">github</a></p>
+<a href="http://vrapt.xyz/" target="_blank"><strike>vr</strike></a> - <a href="https://github.com/erictrose/vrapt.xyz" target="_blank">github</a></p>
 
 <h3>
 <a id="card-trader" class="anchor" href="#card-trader" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Card Trader</h3>
 <img src="https://camo.githubusercontent.com/1ca6d4776d27f4cfef62d2b7e172c12fa38c80d5/687474703a2f2f696d6775722e636f6d2f4a7335354c4f522e706e67" width="200"/>
 <p>Make, battle, bet and trade cards online. <br>
-<a href="http://cardtrader.eric.hosting/" target="_blank">website</a> - <a href="https://github.com/erictrose/CardTrader" target="_blank">github</a></p>
+  <a href="http://cardtrader.eric.hosting/" target="_blank"><strike>website</strike></a> - <a href="https://github.com/erictrose/CardTrader" target="_blank">github</a></p>
 
 <h3>
 <a id="quality-assurance" class="anchor" href="#quality-assurance" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Quality Assurance</h3>
@@ -79,7 +79,7 @@
 <a id="secret-agent-messaging-service" class="anchor" href="#secret-agent-messaging-service" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Secret Agent Messaging Service</h3>
 <img src="https://camo.githubusercontent.com/f55274478d77382f4b5d6a59d1a40e746e8df811/687474703a2f2f696d6775722e636f6d2f513654446d4b322e706e67" width="200"/>
 <p>Send messages through an innocuous looking site. <br>
-<a href="http://sams.eric.hosting/" target="_blank">website</a> - <a href="https://github.com/erictrose/SecretAgentMessagingService" target="_blank">github</a></p>
+<a href="http://sams.eric.hosting/" target="_blank"><strike>website</strike></a> - <a href="https://github.com/erictrose/SecretAgentMessagingService" target="_blank">github</a></p>
 
 <h3>
 <a id="wise-owl-tutoring" class="anchor" href="#wise-owl-tutoring" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Wise Owl Tutoring</h3>
@@ -150,7 +150,7 @@
         <p>Sketch: <a href="http://imgur.com/UoLERFj" target="_blank">creature</a></p>
     </li>
     <li>
-        <p>Poster: <a href="http://imgur.com/1i2yEvk" target="_blank">inspirational</a></p>
+        <p>Poster: <a href="http://imgur.com/1i2yEvk" target="_blank">stay cool</a></p>
     </li>
 </ul>
      
